--- a/index.html
+++ b/index.html
@@ -4,24 +4,103 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Awesome Website</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+     <link rel="stylesheet" href="style.css">
+<style>
+  body {
+    font-family: 'Poppins', sans-serif;
+  }
+</style>
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>Welcome to My  Viviana's Website</h1>
     </header>
+<section id="hero" style="text-align: center; padding: 4rem 2rem; background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%); color: white;">
+  <h1 style="font-size: 3rem; margin-bottom: 0.5rem;">VIVIANA CRISPIN MUGARULA</h1>
+  <h2 style="font-size: 1.5rem; font-weight: normal; margin-bottom: 1rem;">
+    <span style="font-weight: bold;">Veefantasy</span> – the aspiring programmer<sub>S.E</sub>
+  </h2>
+  <p style="font-size: 1.1rem; max-width: 600px; margin: 0 auto;">
+    Striving for perfection and inspiring with every line of code.
+  </p>
+</section>
+<section id="about" style="background-color: #f9f9f9; color: #333; padding: 3rem 2rem; text-align: center;">
+  <h2 style="font-size: 2.2rem; margin-bottom: 1rem;">About Me</h2>
+  <img src="images/photo.jpg" alt="Viviana" style="width: 150px; height: 150px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem; box-shadow: 0 4px 10px rgba(0,0,0,0.2);">
+  <p style="max-width: 600px; margin: 0 auto; font-size: 1.1rem;">
+    Hello! I'm <strong>Viviana Crispin Mugarula</strong>, also known as <em>Veefantasy</em> — a passionate and aspiring programmer with dreams of becoming a top Software Engineer. I enjoy coding creative solutions, exploring web development, and constantly learning new technologies.
+  Technology has always been an essential part of my life. It's not just about using gadgets or browsing the internet; it's about problem-solving and building solutions that can make a difference. I’ve always been fascinated by how technology can change the way we live, work, and interact with the world. My journey in coding started with the excitement of transforming ideas into reality with just a few lines of code.
 
-    <section>
-        <h2>About Me</h2>
-        <p>This is my awesome first page hosted on GitHub Pages. More to come soon!</p>
-    </section>
+What I love most about coding is the ability to bring my creativity and logic together. Every problem I solve, every challenge I face, and every project I complete pushes me to grow and develop as a programmer. Coding is a blend of art and science, and that’s what excites me. It’s not just about writing syntax; it's about creating things that can potentially impact lives — one line of code at a time.
+
+As I continue to learn, experiment, and build, I believe technology has the power to change the world, and I want to be part of that change..This is my awesome first page hosted on GitHub Pages. More to come soon!</p>
+</section>
 
     <section>
         <h2>Gallery</h2>
         <img src="my photoo.jpg" alt="Sample Image" width="300">
     </section>
+    <section id="projects" style="background-color: #f4f4f4; padding: 4rem 2rem; text-align: center;">
+  <h2 style="font-size: 2.2rem; margin-bottom: 1rem;">My Projects</h2>
+  <p style="font-size: 1.1rem; margin-bottom: 2rem;">Here are a few of my projects that showcase my skills and passion for programming:</p>
 
-    <footer>
+  <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 2rem;">
+    <!-- Project 1 -->
+    <div style="width: 280px; background-color: white; padding: 1.5rem; box-shadow: 0 4px 10px rgba(0,0,0,0.1); border-radius: 8px;">
+      <img src="code.jpg" alt="Project 1" style="width: 100%; height: 200px; object-fit: cover; border-radius: 8px;">
+      <h3 style="font-size: 1.5rem; margin: 1rem 0;">Project 1: Web App</h3>
+      <p>A brief description of what the project is about, the technology used, and what you learned from it. Add any links to GitHub or live demos if available.</p>
+      <a href="https://github.com/Veefantasy/project1" target="_blank" style="color: #3498db; text-decoration: none;">View on GitHub</a>
+    </div>
+
+    <!-- Project 2 -->
+    <div style="width: 280px; background-color: white; padding: 1.5rem; box-shadow: 0 4px 10px rgba(0,0,0,0.1); border-radius: 8px;">
+      <img src="coding.jpg" alt="Project 2" style="width: 100%; height: 200px; object-fit: cover; border-radius: 8px;">
+      <h3 style="font-size: 1.5rem; margin: 1rem 0;">Project 2: Mobile App</h3>
+      <p>A brief description of what the project is about, the technology used, and what you learned from it. Add any links to GitHub or live demos if available.</p>
+      <a href="https://github.com/Veefantasy/project2" target="_blank" style="color: #3498db; text-decoration: none;">View on GitHub</a>
+    </div>
+
+    <!-- Project 3 -->
+    <div style="width: 280px; background-color: white; padding: 1.5rem; box-shadow: 0 4px 10px rgba(0,0,0,0.1); border-radius: 8px;">
+      <img src="ai.jpg" alt="Project 3" style="width: 100%; height: 200px; object-fit: cover; border-radius: 8px;">
+      <h3 style="font-size: 1.5rem; margin: 1rem 0;">Project 3: Game Development</h3>
+      <p>A brief description of what the project is about, the technology used, and what you learned from it. Add any links to GitHub or live demos if available and this is the project which i am learning to keep it through to know how can i use my coding or programming knowledge to accure AI machine.</p>
+      <a href="https://github.com/Veefantasy/project3" target="_blank" style="color: #3498db; text-decoration: none;">View on GitHub</a>
+    </div>
+  </div>
+</section>
+<section id="contact" style="background-color: #222; color: white; padding: 4rem 2rem; text-align: center;">
+  <h2 style="font-size: 2.5rem; margin-bottom: 1rem;">Contact Me</h2>
+  <p style="font-size: 1.1rem; margin-bottom: 2rem;">Feel free to reach out to me through any of the platforms below. I would love to connect!</p>
+
+  <div style="display: flex; justify-content: center; gap: 2rem; flex-wrap: wrap;">
+
+    <!-- Social Media Links -->
+    <div>
+      <h3 style="font-size: 1.8rem; margin-bottom: 1rem;">Social Media</h3>
+      <a href="https://www.threads.net/@veefantasy2" target="_blank" style="color: #fff; text-decoration: none; font-size: 1.1rem; margin-bottom: 0.8rem; display: block;">Threads</a>
+      <a href="https://github.com/Veefantasy-style" target="_blank" style="color: #fff; text-decoration: none; font-size: 1.1rem; margin-bottom: 0.8rem; display: block;">GitHub</a>
+      <a href="https://www.instagram.com/veefantasy2/" target="_blank" style="color: #fff; text-decoration: none; font-size: 1.1rem; margin-bottom: 0.8rem; display: block;">Instagram</a>
+    </div>
+
+    <!-- Email Contact -->
+    <div>
+      <h3 style="font-size: 1.8rem; margin-bottom: 1rem;">Email</h3>
+      <a href="mailto:vivianacrispin70@gmail.com" style="color: #fff; text-decoration: none; font-size: 1.1rem; display: block;">vivianacrispin70@gmail.com</a>
+    </div>
+  </div>
+</section>
+<footer style="background-color: #333; color: white; padding: 2rem 0; text-align: center;">
+  <p style="font-size: 1.1rem; margin: 0;">&copy; 2025 Viviana Crispin Mugarula</p>
+  <p style="font-size: 1rem;">Made with ❤️ by Veefantasy</p>
+  <div style="margin-top: 1rem;">
+    <a href="#home" style="color: #fff; text-decoration: none; margin: 0 10px;">Home</a>
+    <a href="#about" style="color: #fff; text-decoration: none; margin: 0 10px;">About</a>
+    <a href="#projects" style="color: #fff; text-decoration: none; margin: 0 10px;">Projects</a>
+    <a href="#contact" style="color: #fff; text-decoration: none; margin: 0 10px;">Contact</a>
+  </div>
         <p>© 2025 My Awesome Website</p>
     </footer>
 </body>
