--- a/index.html
+++ b/index.html
@@ -10,22 +10,97 @@
   body {
     font-family: 'Poppins', sans-serif;
   }
+  /* Sparkling effect on hover */
+      .sparkle-name {
+    font-size: 3rem;
+    font-weight: bold;
+    color: #fff;
+    animation: glow 2s ease-in-out infinite alternate;
+  }
+
+  .sparkle-tagline {
+    font-size: 1.5rem;
+    color: #ffcc00;
+    margin-top: 0.5rem;
+    animation: flicker 3s infinite;
+  }
+
+  .intro-line {
+    font-style: italic;
+    margin-top: 1rem;
+    color: #ccc;
+  }
+
+  @keyframes glow {
+    from {
+      text-shadow: 0 0 10px #ff00cc, 0 0 20px #ff00cc, 0 0 30px #ff00cc;
+    }
+    to {
+      text-shadow: 0 0 20px #00ccff, 0 0 30px #00ccff, 0 0 40px #00ccff;
+    }
+  }
+
+  @keyframes flicker {
+    0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
+      opacity: 1;
+    }
+    20%, 24%, 55% {
+      opacity: 0.4;
+    }
+  a {
+    position: relative;
+    color: white;
+    text-decoration: none;
+    font-size: 1.2rem;
+    margin: 0 15px;
+    transition: color 0.3s ease;
+  }
+
+  a::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 100%;
+    height: 2px;
+    background-color: #ff0;
+    transform: scaleX(0);
+    transform-origin: center;
+    transition: transform 0.5s ease;
+  }
+
+  a:hover::before {
+    transform: scaleX(1);
+  }
+
+  a:hover {
+    color: #ff0; /* Yellow sparkly color */
+  }
+
 </style>
 </head>
 <body>
     <header>
-        <h1>Welcome to My  Viviana's Website</h1>
+        <h1>Welcome to My Website</h1>
     </header>
-<section id="hero" style="text-align: center; padding: 4rem 2rem; background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%); color: white;">
-  <h1 style="font-size: 3rem; margin-bottom: 0.5rem;">VIVIANA CRISPIN MUGARULA</h1>
-  <h2 style="font-size: 1.5rem; font-weight: normal; margin-bottom: 1rem;">
-    <span style="font-weight: bold;">Veefantasy</span> – the aspiring programmer<sub>S.E</sub>
+    
+<section id="home" class="animate__animated animate__fadeIn" style="text-align: center; padding: 4rem 2rem; background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%); color: white;">
+  <h1  class="sparkle-name" style="font-size: 3rem; margin-bottom: 0.5rem;">VIVIANA CRISPIN MUGARULA</h1>
+  <h2  class="sparkle-tagline" style="font-size: 1.5rem; font-weight: normal; margin-bottom: 1rem;">
+    <span style="font-weight: bold;">Veefantasy</span> – the aspiring programmer
   </h2>
-  <p style="font-size: 1.1rem; max-width: 600px; margin: 0 auto;">
+  <p  class="intro-line" style="font-size: 1.1rem; max-width: 600px; margin: 0 auto;">
     Striving for perfection and inspiring with every line of code.
   </p>
+    <nav style="position: fixed; top: 0; width: 100%; background-color: rgba(0, 0, 0, 0.7); padding: 1rem; text-align: center; z-index: 1000;">
+  <a href="#home" style="color: white; text-decoration: none; font-size: 1.2rem; margin: 0 15px; transition: color 0.3s;">Home</a>
+  <a href="#about" style="color: white; text-decoration: none; font-size: 1.2rem; margin: 0 15px; transition: color 0.3s;">About</a>
+  <a href="#projects" style="color: white; text-decoration: none; font-size: 1.2rem; margin: 0 15px; transition: color 0.3s;">Projects</a>
+  <a href="#contact" style="color: white; text-decoration: none; font-size: 1.2rem; margin: 0 15px; transition: color 0.3s;">Contact</a>
+</nav>
+
 </section>
-<section id="about" style="background-color: #f9f9f9; color: #333; padding: 3rem 2rem; text-align: center;">
+<section id="about" class="animate__animated animate__fadeIn" style="background-color: #f9f9f9; color: #333; padding: 3rem 2rem; text-align: center;">
   <h2 style="font-size: 2.2rem; margin-bottom: 1rem;">About Me</h2>
   <img src="images/photo.jpg" alt="Viviana" style="width: 150px; height: 150px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem; box-shadow: 0 4px 10px rgba(0,0,0,0.2);">
   <p style="max-width: 600px; margin: 0 auto; font-size: 1.1rem;">
@@ -41,7 +116,7 @@ As I continue to learn, experiment, and build, I believe technology has the powe
         <h2>Gallery</h2>
         <img src="my photoo.jpg" alt="Sample Image" width="300">
     </section>
-    <section id="projects" style="background-color: #f4f4f4; padding: 4rem 2rem; text-align: center;">
+    <section id="projects" class="animate__animated animate__fadeIn" style="background-color: #f4f4f4; padding: 4rem 2rem; text-align: center;">
   <h2 style="font-size: 2.2rem; margin-bottom: 1rem;">My Projects</h2>
   <p style="font-size: 1.1rem; margin-bottom: 2rem;">Here are a few of my projects that showcase my skills and passion for programming:</p>
 
@@ -71,7 +146,7 @@ As I continue to learn, experiment, and build, I believe technology has the powe
     </div>
   </div>
 </section>
-<section id="contact" style="background-color: #222; color: white; padding: 4rem 2rem; text-align: center;">
+<section id="contact" class="animate__animated animate__fadeIn" style="background-color: #222; color: white; padding: 4rem 2rem; text-align: center;">
   <h2 style="font-size: 2.5rem; margin-bottom: 1rem;">Contact Me</h2>
   <p style="font-size: 1.1rem; margin-bottom: 2rem;">Feel free to reach out to me through any of the platforms below. I would love to connect!</p>
 
